== Groups by itthinx - changelog.txt ==

= 2.6.1 =
* Improved the useability of group selection dropdowns.

= 2.6.0 =
* Tested for WordPress 5.1.
* Added an option to filter by posts restricted by any group.
* Added an option to filter by posts restricted by no group.
* Removed an option to filter by only unrestricted posts which didn't work.
* Improved groups column header fitting on post admin screens.
* Fixed a notice when a user has no groups assigned.

= 2.5.0 =
* Tested for WordPress 5.0.

= 2.4.0 =
* Improved performance when filtering the users list by groups to avoid issues with large user bases.
* Tested with the latest WordPress 4.9.
* Updated the minimum required WordPress version to 4.6.
* Fixed a missing Javascript resource when selecting an image in the customizer.

= 2.3.1 =
* Fixed several points where warnings related to the use of count() and the Countable interface would occur due to changes in PHP 7.2.
* Tested with WordPress 4.9.
* Added the groups_post_access_posts_where_query_get_post_types filter to allow additional processing to cover for cases like where
  wc_query is set.
* Fixed a notice related to the use of an undefined variable in the Groups_Post_Access class.
* Added the logo and the option to get reminded later to the Groups notice.
* Added filters on get_previous_post_where and get_next_post_where to restrict access on adjacent posts.

= 2.3.0 =
* Tested with WordPress 4.8.
* Fixed a REST API access restriction issue, added the filter rest_prepare_{$post_type} to
  grant or deny access to individual posts.
* Updated the translation template.
* German translation updated.
* Updated the appearance of the network settings.
* Updated the table creation process dropping use of dbDelta() due to its restrictions (can't handle IF NOT EXISTS).
* Fixed an issue related to cache and switching to a blog when neither wp_cache_switch_to_blog() nor wp_cache_reset()