@@ -1,7 +1,8 @@
 == Groups by itthinx - changelog.txt ==
 
 = 2.6.1 =
-* Improved the useability of group selection dropdowns.
+* Improved the useability of group and capability selection dropdowns.
+* Fixed clash between group filter and group action on Users admin screen.
 
 = 2.6.0 =
 * Tested for WordPress 5.1.
